--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lattice Summaries</title>
 </head>
